[gd_scene load_steps=25 format=3 uid="uid://cnnxenb02x3p5"]

[ext_resource type="Script" path="res://fairy_spawner.gd" id="1_8madj"]
[ext_resource type="Texture2D" uid="uid://db1uyoload18h" path="res://Tileset_Grass.png" id="1_n1lib"]
[ext_resource type="Texture2D" uid="uid://vxm8yefiwa5" path="res://Fairy_Spawner-Sheet.png" id="2_dbhkm"]
[ext_resource type="Texture2D" uid="uid://cgd8vl8kewmyn" path="res://Tileset_Grass_2.png" id="2_qofd8"]
[ext_resource type="Texture2D" uid="uid://da1wl062sqfj2" path="res://Tileset_Grass_3.png" id="3_pkpr6"]
[ext_resource type="Texture2D" uid="uid://d1msedyvo4crc" path="res://flowers_16x16.png" id="4_rrdcx"]
[ext_resource type="Texture2D" uid="uid://dffqpln68ll7n" path="res://flowers_16x16_wilt1.png" id="5_mcny2"]
[ext_resource type="Texture2D" uid="uid://ddlfe1c58nug7" path="res://flowers_16x16_wilt2.png" id="6_6q86j"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pe8im"]
resource_name = "grass"
texture = ExtResource("1_n1lib")
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/terrains_peering_bit/bottom_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/bottom_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/terrains_peering_bit/right_side = 0
5:0/0/terrains_peering_bit/bottom_side = 0
5:0/0/terrains_peering_bit/bottom_left_corner = 0
5:0/0/terrains_peering_bit/left_side = 0
6:0/0 = 0
6:0/0/terrain_set = 0
6:0/0/terrain = 0
6:0/0/terrains_peering_bit/right_side = 0
6:0/0/terrains_peering_bit/bottom_right_corner = 0
6:0/0/terrains_peering_bit/bottom_side = 0
6:0/0/terrains_peering_bit/left_side = 0
7:0/0 = 0
7:0/0/terrain_set = 0
7:0/0/terrain = 0
7:0/0/terrains_peering_bit/bottom_side = 0
7:0/0/terrains_peering_bit/left_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/terrains_peering_bit/right_side = 0
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/left_side = 0
9:0/0 = 0
9:0/0/terrain_set = 0
9:0/0/terrain = 0
9:0/0/terrains_peering_bit/right_side = 0
9:0/0/terrains_peering_bit/bottom_right_corner = 0
9:0/0/terrains_peering_bit/bottom_side = 0
9:0/0/terrains_peering_bit/left_side = 0
9:0/0/terrains_peering_bit/top_left_corner = 0
9:0/0/terrains_peering_bit/top_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 0
3:1/0/terrains_peering_bit/bottom_side = 0
3:1/0/terrains_peering_bit/top_side = 0
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 0
4:1/0/terrains_peering_bit/right_side = 0
4:1/0/terrains_peering_bit/bottom_side = 0
4:1/0/terrains_peering_bit/top_side = 0
4:1/0/terrains_peering_bit/top_right_corner = 0
5:1/0 = 0
5:1/0/terrain_set = 0
5:1/0/terrain = 0
5:1/0/terrains_peering_bit/right_side = 0
5:1/0/terrains_peering_bit/bottom_side = 0
5:1/0/terrains_peering_bit/bottom_left_corner = 0
5:1/0/terrains_peering_bit/left_side = 0
5:1/0/terrains_peering_bit/top_left_corner = 0
5:1/0/terrains_peering_bit/top_side = 0
5:1/0/terrains_peering_bit/top_right_corner = 0
6:1/0 = 0
6:1/0/terrain_set = 0
6:1/0/terrain = 0
6:1/0/terrains_peering_bit/right_side = 0
6:1/0/terrains_peering_bit/bottom_right_corner = 0
6:1/0/terrains_peering_bit/bottom_side = 0
6:1/0/terrains_peering_bit/left_side = 0
6:1/0/terrains_peering_bit/top_left_corner = 0
6:1/0/terrains_peering_bit/top_side = 0
6:1/0/terrains_peering_bit/top_right_corner = 0
7:1/0 = 0
7:1/0/terrain_set = 0
7:1/0/terrain = 0
7:1/0/terrains_peering_bit/bottom_side = 0
7:1/0/terrains_peering_bit/left_side = 0
7:1/0/terrains_peering_bit/top_left_corner = 0
7:1/0/terrains_peering_bit/top_side = 0
8:1/0 = 0
8:1/0/terrain_set = 0
8:1/0/terrain = 0
8:1/0/terrains_peering_bit/right_side = 0
8:1/0/terrains_peering_bit/bottom_side = 0
8:1/0/terrains_peering_bit/left_side = 0
8:1/0/terrains_peering_bit/top_left_corner = 0
8:1/0/terrains_peering_bit/top_side = 0
8:1/0/terrains_peering_bit/top_right_corner = 0
9:1/0 = 0
9:1/0/terrain_set = 0
9:1/0/terrain = 0
9:1/0/terrains_peering_bit/right_side = 0
9:1/0/terrains_peering_bit/bottom_side = 0
9:1/0/terrains_peering_bit/bottom_left_corner = 0
9:1/0/terrains_peering_bit/left_side = 0
9:1/0/terrains_peering_bit/top_side = 0
9:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 0
3:2/0/terrains_peering_bit/top_side = 0
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 0
4:2/0/terrains_peering_bit/right_side = 0
4:2/0/terrains_peering_bit/bottom_right_corner = 0
4:2/0/terrains_peering_bit/bottom_side = 0
4:2/0/terrains_peering_bit/top_side = 0
5:2/0 = 0
5:2/0/terrain_set = 0
5:2/0/terrain = 0
5:2/0/terrains_peering_bit/right_side = 0
5:2/0/terrains_peering_bit/bottom_right_corner = 0
5:2/0/terrains_peering_bit/bottom_side = 0
5:2/0/terrains_peering_bit/bottom_left_corner = 0
5:2/0/terrains_peering_bit/left_side = 0
5:2/0/terrains_peering_bit/top_left_corner = 0
5:2/0/terrains_peering_bit/top_side = 0
6:2/0 = 0
6:2/0/terrain_set = 0
6:2/0/terrain = 0
6:2/0/terrains_peering_bit/right_side = 0
6:2/0/terrains_peering_bit/bottom_right_corner = 0
6:2/0/terrains_peering_bit/bottom_side = 0
6:2/0/terrains_peering_bit/bottom_left_corner = 0
6:2/0/terrains_peering_bit/left_side = 0
6:2/0/terrains_peering_bit/top_side = 0
6:2/0/terrains_peering_bit/top_right_corner = 0
7:2/0 = 0
7:2/0/terrain_set = 0
7:2/0/terrain = 0
7:2/0/terrains_peering_bit/bottom_side = 0
7:2/0/terrains_peering_bit/bottom_left_corner = 0
7:2/0/terrains_peering_bit/left_side = 0
7:2/0/terrains_peering_bit/top_side = 0
8:2/0 = 0
8:2/0/terrain_set = 0
8:2/0/terrain = 0
8:2/0/terrains_peering_bit/right_side = 0
8:2/0/terrains_peering_bit/bottom_right_corner = 0
8:2/0/terrains_peering_bit/bottom_side = 0
8:2/0/terrains_peering_bit/bottom_left_corner = 0
8:2/0/terrains_peering_bit/left_side = 0
8:2/0/terrains_peering_bit/top_side = 0
9:2/0 = 0
9:2/0/terrain_set = 0
9:2/0/terrain = 0
9:2/0/terrains_peering_bit/right_side = 0
9:2/0/terrains_peering_bit/bottom_right_corner = 0
9:2/0/terrains_peering_bit/bottom_side = 0
9:2/0/terrains_peering_bit/left_side = 0
9:2/0/terrains_peering_bit/top_side = 0
10:2/0 = 0
10:2/0/terrain_set = 0
10:2/0/terrain = 0
10:2/0/terrains_peering_bit/right_side = 0
10:2/0/terrains_peering_bit/bottom_side = 0
10:2/0/terrains_peering_bit/bottom_left_corner = 0
10:2/0/terrains_peering_bit/left_side = 0
10:2/0/terrains_peering_bit/top_side = 0
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 0
0:3/0/terrains_peering_bit/right_side = 0
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 0
1:3/0/terrains_peering_bit/right_side = 0
1:3/0/terrains_peering_bit/left_side = 0
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 0
2:3/0/terrains_peering_bit/left_side = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/top_side = 0
5:3/0 = 0
5:3/0/terrain_set = 0
5:3/0/terrain = 0
5:3/0/terrains_peering_bit/right_side = 0
5:3/0/terrains_peering_bit/left_side = 0
5:3/0/terrains_peering_bit/top_left_corner = 0
5:3/0/terrains_peering_bit/top_side = 0
6:3/0 = 0
6:3/0/terrain_set = 0
6:3/0/terrain = 0
6:3/0/terrains_peering_bit/right_side = 0
6:3/0/terrains_peering_bit/left_side = 0
6:3/0/terrains_peering_bit/top_side = 0
6:3/0/terrains_peering_bit/top_right_corner = 0
7:3/0 = 0
7:3/0/terrain_set = 0
7:3/0/terrain = 0
7:3/0/terrains_peering_bit/left_side = 0
7:3/0/terrains_peering_bit/top_side = 0
8:3/0 = 0
8:3/0/terrain_set = 0
8:3/0/terrain = 0
8:3/0/terrains_peering_bit/right_side = 0
8:3/0/terrains_peering_bit/left_side = 0
8:3/0/terrains_peering_bit/top_side = 0
9:3/0 = 0
9:3/0/terrain_set = 0
9:3/0/terrain = 0
9:3/0/terrains_peering_bit/right_side = 0
9:3/0/terrains_peering_bit/bottom_side = 0
9:3/0/terrains_peering_bit/left_side = 0
9:3/0/terrains_peering_bit/top_side = 0
9:3/0/terrains_peering_bit/top_right_corner = 0
10:3/0 = 0
10:3/0/terrain_set = 0
10:3/0/terrain = 0
10:3/0/terrains_peering_bit/right_side = 0
10:3/0/terrains_peering_bit/bottom_side = 0
10:3/0/terrains_peering_bit/left_side = 0
10:3/0/terrains_peering_bit/top_left_corner = 0
10:3/0/terrains_peering_bit/top_side = 0
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/top_side = 0
5:4/0 = 0
5:4/0/terrain_set = 0
5:4/0/terrain = 0
5:4/0/terrains_peering_bit/right_side = 0
5:4/0/terrains_peering_bit/bottom_side = 0
5:4/0/terrains_peering_bit/bottom_left_corner = 0
5:4/0/terrains_peering_bit/left_side = 0
5:4/0/terrains_peering_bit/top_left_corner = 0
5:4/0/terrains_peering_bit/top_side = 0
6:4/0 = 0
6:4/0/terrain_set = 0
6:4/0/terrain = 0
6:4/0/terrains_peering_bit/right_side = 0
6:4/0/terrains_peering_bit/bottom_right_corner = 0
6:4/0/terrains_peering_bit/bottom_side = 0
6:4/0/terrains_peering_bit/left_side = 0
6:4/0/terrains_peering_bit/top_side = 0
6:4/0/terrains_peering_bit/top_right_corner = 0
7:4/0 = 0
7:4/0/terrain_set = 0
7:4/0/terrain = 0
7:4/0/terrains_peering_bit/bottom_side = 0
7:4/0/terrains_peering_bit/left_side = 0
7:4/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/terrains_peering_bit/right_side = 0
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_side = 0
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:4/0 = 0
0:4/0/z_index = 1
1:4/0 = 0
1:4/0/z_index = 1
2:4/0 = 0
2:4/0/z_index = 1
3:4/0 = 0
3:4/0/z_index = 1
9:4/0 = 0
9:4/0/z_index = 1

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_67hvt"]
texture = ExtResource("2_qofd8")
0:0/animation_separation = Vector2i(10, 0)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 1
0:0/0/terrains_peering_bit/right_side = 1
0:0/0/terrains_peering_bit/bottom_right_corner = 1
0:0/0/terrains_peering_bit/bottom_side = 1
1:0/animation_separation = Vector2i(10, 0)
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 1
1:0/0/terrains_peering_bit/right_side = 1
1:0/0/terrains_peering_bit/bottom_right_corner = 1
1:0/0/terrains_peering_bit/bottom_side = 1
1:0/0/terrains_peering_bit/bottom_left_corner = 1
1:0/0/terrains_peering_bit/left_side = 1
2:1/animation_separation = Vector2i(10, 0)
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 1
2:1/0/terrains_peering_bit/bottom_side = 1
2:1/0/terrains_peering_bit/bottom_left_corner = 1
2:1/0/terrains_peering_bit/left_side = 1
2:1/0/terrains_peering_bit/top_left_corner = 1
2:1/0/terrains_peering_bit/top_side = 1
3:1/animation_separation = Vector2i(10, 0)
3:1/0 = 0
3:1/0/terrain_set = 0
3:1/0/terrain = 1
3:1/0/terrains_peering_bit/bottom_side = 1
3:1/0/terrains_peering_bit/top_side = 1
4:1/animation_separation = Vector2i(10, 0)
4:1/0 = 0
4:1/0/terrain_set = 0
4:1/0/terrain = 1
4:1/0/terrains_peering_bit/bottom_side = 1
4:1/0/terrains_peering_bit/top_side = 1
4:2/animation_separation = Vector2i(10, 0)
4:2/0 = 0
4:2/0/terrain_set = 0
4:2/0/terrain = 1
4:2/0/terrains_peering_bit/top_side = 1
5:2/animation_separation = Vector2i(10, 0)
5:2/0 = 0
5:2/0/terrain_set = 0
6:2/animation_separation = Vector2i(10, 0)
6:2/0 = 0
6:2/0/terrain_set = 0
7:3/animation_separation = Vector2i(10, 0)
7:3/0 = 0
7:3/0/terrain_set = 0
8:3/animation_separation = Vector2i(10, 0)
8:3/0 = 0
8:3/0/terrain_set = 0
9:3/animation_separation = Vector2i(10, 0)
9:3/0 = 0
9:3/0/terrain_set = 0
10:3/animation_separation = Vector2i(10, 0)
10:3/0 = 0
10:3/0/terrain_set = 0
10:2/animation_separation = Vector2i(10, 0)
10:2/0 = 0
10:2/0/terrain_set = 0
9:2/animation_separation = Vector2i(10, 0)
9:2/0 = 0
9:2/0/terrain_set = 0
9:1/animation_separation = Vector2i(10, 0)
9:1/0 = 0
9:1/0/terrain_set = 0
8:1/animation_separation = Vector2i(10, 0)
8:1/0 = 0
8:1/0/terrain_set = 0
8:0/animation_separation = Vector2i(10, 0)
8:0/0 = 0
8:0/0/terrain_set = 0
7:0/animation_separation = Vector2i(10, 0)
7:0/0 = 0
7:0/0/terrain_set = 0
6:0/animation_separation = Vector2i(10, 0)
6:0/0 = 0
6:0/0/terrain_set = 0
5:0/animation_separation = Vector2i(10, 0)
5:0/0 = 0
5:0/0/terrain_set = 0
4:0/animation_separation = Vector2i(10, 0)
4:0/0 = 0
4:0/0/terrain_set = 0
3:0/animation_separation = Vector2i(10, 0)
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 1
3:0/0/terrains_peering_bit/bottom_side = 1
2:0/animation_separation = Vector2i(10, 0)
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 1
2:0/0/terrains_peering_bit/bottom_side = 1
2:0/0/terrains_peering_bit/bottom_left_corner = 1
2:0/0/terrains_peering_bit/left_side = 1
9:0/animation_separation = Vector2i(10, 0)
9:0/0 = 0
9:0/0/terrain_set = 0
8:2/animation_separation = Vector2i(10, 0)
8:2/0 = 0
8:2/0/terrain_set = 0
7:2/animation_separation = Vector2i(10, 0)
7:2/0 = 0
7:2/0/terrain_set = 0
3:2/animation_separation = Vector2i(10, 0)
3:2/0 = 0
3:2/0/terrain_set = 0
3:2/0/terrain = 1
3:2/0/terrains_peering_bit/top_side = 1
2:2/animation_separation = Vector2i(10, 0)
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 1
2:2/0/terrains_peering_bit/left_side = 1
2:2/0/terrains_peering_bit/top_left_corner = 1
2:2/0/terrains_peering_bit/top_side = 1
1:2/animation_separation = Vector2i(10, 0)
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 1
1:2/0/terrains_peering_bit/right_side = 1
1:2/0/terrains_peering_bit/left_side = 1
1:2/0/terrains_peering_bit/top_left_corner = 1
1:2/0/terrains_peering_bit/top_side = 1
1:2/0/terrains_peering_bit/top_right_corner = 1
1:1/animation_separation = Vector2i(10, 0)
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 1
1:1/0/terrains_peering_bit/right_side = 1
1:1/0/terrains_peering_bit/bottom_right_corner = 1
1:1/0/terrains_peering_bit/bottom_side = 1
1:1/0/terrains_peering_bit/bottom_left_corner = 1
1:1/0/terrains_peering_bit/left_side = 1
1:1/0/terrains_peering_bit/top_left_corner = 1
1:1/0/terrains_peering_bit/top_side = 1
1:1/0/terrains_peering_bit/top_right_corner = 1
0:1/animation_separation = Vector2i(10, 0)
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 1
0:1/0/terrains_peering_bit/right_side = 1
0:1/0/terrains_peering_bit/bottom_right_corner = 1
0:1/0/terrains_peering_bit/bottom_side = 1
0:1/0/terrains_peering_bit/top_side = 1
0:1/0/terrains_peering_bit/top_right_corner = 1
0:2/animation_separation = Vector2i(10, 0)
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 1
0:2/0/terrains_peering_bit/right_side = 1
0:2/0/terrains_peering_bit/top_side = 1
0:2/0/terrains_peering_bit/top_right_corner = 1
0:3/animation_separation = Vector2i(10, 0)
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrain = 1
0:3/0/terrains_peering_bit/right_side = 1
1:3/animation_separation = Vector2i(10, 0)
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrain = 1
1:3/0/terrains_peering_bit/right_side = 1
1:3/0/terrains_peering_bit/left_side = 1
2:3/animation_separation = Vector2i(10, 0)
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrain = 1
2:3/0/terrains_peering_bit/left_side = 1
3:3/animation_separation = Vector2i(10, 0)
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 1
4:3/animation_separation = Vector2i(10, 0)
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 1
4:3/0/terrains_peering_bit/top_side = 1
5:3/animation_separation = Vector2i(10, 0)
5:3/0 = 0
5:3/0/terrain_set = 0
5:4/animation_separation = Vector2i(10, 0)
5:4/0 = 0
5:4/0/terrain_set = 0
4:4/animation_separation = Vector2i(10, 0)
4:4/0 = 0
4:4/0/terrain_set = 0
6:4/animation_separation = Vector2i(10, 0)
6:4/0 = 0
6:4/0/terrain_set = 0
7:4/animation_separation = Vector2i(10, 0)
7:4/0 = 0
7:4/0/terrain_set = 0
8:4/animation_separation = Vector2i(10, 0)
8:4/0 = 0
8:4/0/terrain_set = 0
6:3/animation_separation = Vector2i(10, 0)
6:3/0 = 0
6:3/0/terrain_set = 0
6:1/animation_separation = Vector2i(10, 0)
6:1/0 = 0
6:1/0/terrain_set = 0
5:1/animation_separation = Vector2i(10, 0)
5:1/0 = 0
5:1/0/terrain_set = 0
7:1/animation_separation = Vector2i(10, 0)
7:1/0 = 0
7:1/0/terrain_set = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
9:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rkk4m"]
texture = ExtResource("3_pkpr6")
2:0/0 = 0
2:0/0/terrain_set = 0
3:0/0 = 0
3:0/0/terrain_set = 0
4:0/0 = 0
4:0/0/terrain_set = 0
5:0/0 = 0
5:0/0/terrain_set = 0
6:0/0 = 0
6:0/0/terrain_set = 0
7:0/0 = 0
7:0/0/terrain_set = 0
8:0/0 = 0
8:0/0/terrain_set = 0
9:0/0 = 0
9:0/0/terrain_set = 0
0:1/0 = 0
0:1/0/terrain_set = 0
3:1/0 = 0
3:1/0/terrain_set = 0
4:1/0 = 0
4:1/0/terrain_set = 0
5:1/0 = 0
5:1/0/terrain_set = 0
6:1/0 = 0
6:1/0/terrain_set = 0
7:1/0 = 0
7:1/0/terrain_set = 0
8:1/0 = 0
8:1/0/terrain_set = 0
9:1/0 = 0
9:1/0/terrain_set = 0
0:2/0 = 0
0:2/0/terrain_set = 0
1:2/0 = 0
1:2/0/terrain_set = 0
4:2/0 = 0
4:2/0/terrain_set = 0
5:2/0 = 0
5:2/0/terrain_set = 0
6:2/0 = 0
6:2/0/terrain_set = 0
7:2/0 = 0
7:2/0/terrain_set = 0
8:2/0 = 0
8:2/0/terrain_set = 0
9:2/0 = 0
9:2/0/terrain_set = 0
10:2/0 = 0
10:2/0/terrain_set = 0
0:3/0 = 0
0:3/0/terrain_set = 0
1:3/0 = 0
1:3/0/terrain_set = 0
2:3/0 = 0
2:3/0/terrain_set = 0
3:3/0 = 0
3:3/0/terrain_set = 0
4:3/0 = 0
4:3/0/terrain_set = 0
5:3/0 = 0
5:3/0/terrain_set = 0
6:3/0 = 0
6:3/0/terrain_set = 0
7:3/0 = 0
7:3/0/terrain_set = 0
8:3/0 = 0
8:3/0/terrain_set = 0
9:3/0 = 0
9:3/0/terrain_set = 0
10:3/0 = 0
10:3/0/terrain_set = 0
4:4/0 = 0
4:4/0/terrain_set = 0
5:4/0 = 0
5:4/0/terrain_set = 0
6:4/0 = 0
6:4/0/terrain_set = 0
7:4/0 = 0
7:4/0/terrain_set = 0
8:4/0 = 0
8:4/0/terrain_set = 0
3:2/0 = 0
3:2/0/terrain_set = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:1/0 = 0
2:1/0/terrain_set = 0
1:1/0 = 0
1:1/0/terrain_set = 0
0:0/0 = 0
0:0/0/terrain_set = 0
1:0/0 = 0
1:0/0/terrain_set = 0
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrain = 0
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrain = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
9:4/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_16na2"]
texture = ExtResource("4_rrdcx")
0:0/animation_mode = 1
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0
2:0/animation_mode = 1
2:0/animation_frame_0/duration = 1.0
2:0/animation_frame_1/duration = 1.0
2:0/0 = 0
4:0/animation_mode = 1
4:0/animation_frame_0/duration = 1.0
4:0/animation_frame_1/duration = 1.0
4:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_82gpb"]
texture = ExtResource("5_mcny2")
0:0/animation_mode = 1
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:0/animation_mode = 1
2:0/animation_frame_0/duration = 1.0
2:0/animation_frame_1/duration = 1.0
2:0/0 = 0
4:0/animation_mode = 1
4:0/animation_frame_0/duration = 1.0
4:0/animation_frame_1/duration = 1.0
4:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lirbq"]
texture = ExtResource("6_6q86j")
0:0/animation_mode = 1
0:0/animation_frame_0/duration = 1.0
0:0/animation_frame_1/duration = 1.0
0:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:0/animation_mode = 1
2:0/animation_frame_0/duration = 1.0
2:0/animation_frame_1/duration = 1.0
2:0/0 = 0
4:0/animation_mode = 1
4:0/animation_frame_0/duration = 1.0
4:0/animation_frame_1/duration = 1.0
4:0/0 = 0

[sub_resource type="TileSet" id="TileSet_kf0hd"]
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "grass"
terrain_set_0/terrain_0/color = Color(4.81308e-08, 0.442706, 0.439743, 1)
terrain_set_0/terrain_1/name = "wilt1"
terrain_set_0/terrain_1/color = Color(0.5, 0.4375, 0.25, 1)
terrain_set_0/terrain_2/name = "wilt2"
terrain_set_0/terrain_2/color = Color(0.46875, 0.5, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_pe8im")
sources/1 = SubResource("TileSetAtlasSource_67hvt")
sources/2 = SubResource("TileSetAtlasSource_rkk4m")
sources/3 = SubResource("TileSetAtlasSource_16na2")
sources/4 = SubResource("TileSetAtlasSource_82gpb")
sources/5 = SubResource("TileSetAtlasSource_lirbq")

[sub_resource type="AtlasTexture" id="AtlasTexture_24qla"]
atlas = ExtResource("2_dbhkm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q716d"]
atlas = ExtResource("2_dbhkm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_okdnq"]
atlas = ExtResource("2_dbhkm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g0tpj"]
atlas = ExtResource("2_dbhkm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_02131"]
atlas = ExtResource("2_dbhkm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nocmk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_24qla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q716d")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okdnq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0tpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02131")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g0tpj")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0lml6"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t40oa"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orn5v"]
size = Vector2(16, 16)

[node name="fairySpawner0" type="TileMap" groups=["enemy", "fairySpawner"]]
z_index = -1
y_sort_enabled = true
tile_set = SubResource("TileSet_kf0hd")
format = 2
layer_0/name = "base"
layer_0/y_sort_enabled = true
layer_1/name = "clutter"
layer_1/y_sort_enabled = true
layer_1/tile_data = PackedInt32Array()
script = ExtResource("1_8madj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(-8, -8)
sprite_frames = SubResource("SpriteFrames_nocmk")
animation = &"dead"
frame = 1
frame_progress = 1.0

[node name="hitbox" type="Area2D" parent="."]
position = Vector2(-8, -8)
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource("RectangleShape2D_0lml6")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-8, -8)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_t40oa")

[node name="overlapDetector" type="Area2D" parent="."]
position = Vector2(-8, -8)
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="overlapDetector"]
shape = SubResource("RectangleShape2D_orn5v")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-8, -8)
rect = Rect2(-8, -8, 16, 16)

[node name="spawnTimer" type="Timer" parent="VisibleOnScreenEnabler2D"]
process_callback = 0

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="body_entered" from="overlapDetector" to="." method="_on_overlap_detector_body_entered"]
[connection signal="body_exited" from="overlapDetector" to="." method="_on_overlap_detector_body_exited"]
[connection signal="timeout" from="VisibleOnScreenEnabler2D/spawnTimer" to="." method="_on_spawn_timer_timeout"]
